--- a/module3/index.html
+++ b/module3/index.html
@@ -21,12 +21,11 @@
 
 <body>
     <header>
-        <nav id="header-nav" class="navbar navbar-default">
-            <div class="container-fluid">
+        <nav id="header-nav" class="navbar navbar-default navbar-static-top">
+            <div class="container">
                 <div class="navbar-header">
                     <div class="navbar-brand">
-                        <a href="index.html" class="pull-left">
-                            <h1>Food, LLC</h1></a>
+                        <a href="index.html"><h1>Food, LLC</h1></a>
                     </div>
 
                     <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
