--- a/module3/index.html
+++ b/module3/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <nav id="header-nav" class="navbar navbar-default navbar-static-top">
+        <nav id="header-nav" class="navbar navbar-default .navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
                     <div class="navbar-brand">
